# src/http/routes/get-pending-goals.ts
@@ -11,6 +11,7 @@ export const getPendingRoute: FastifyPluginAsync = async app => {
       schema: {
         tags: ['goals'],
         description: 'Get pending goals for the current week',
+        operationId: 'getPendingGoals',
         response: {
           200: z.object({
             pendingGoals: z.array(
